infra/k8s/questspace-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: questspace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - millionaire-web.ru
      secretName: questspace-tls-secret
  rules:
    - host: millionaire-web.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: questspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: questspace-backend
  template:
    metadata:
      labels:
        app: questspace-backend
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: backend-container
          image: cr.yandex/crpl9s9mvc8h74r32rk4/backend:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: questspace
spec:
  selector:
    app: questspace-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
